--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,29 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>TalentFlow</display-name>
 
-</web-app>
+  <!-- Configuration de la Servlet -->
+  <servlet>
+    <servlet-name>OffresEmploiServlet</servlet-name>
+    <servlet-class>Offre_Emploi.Servlets.OffreEmploiServlet</servlet-class> <!-- Remplace ce package par le bon chemin de ta Servlet -->
+  </servlet>
+
+  <!-- Mapping de la Servlet -->
+  <servlet-mapping>
+    <servlet-name>OffresEmploiServlet</servlet-name>
+    <url-pattern>/offres-emploi</url-pattern> <!-- L'URL de la Servlet que tu appelles dans ton navigateur -->
+  </servlet-mapping>
+
+
+
+    <servlet>
+      <servlet-name>JobListingsServlet</servlet-name>
+      <servlet-class>Offre_Emploi.Servlets.OffreEmploiServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>JobListingsServlet</servlet-name>
+      <url-pattern>/job-listings</url-pattern> <!-- C'est l'URL qui doit correspondre -->
+    </servlet-mapping>
+  </web-app>
+
+
